# Expedition33

./: .gitignore  README.md  config.py  config.yaml.example  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  context.py  llm.py  planner.py
agent/prompts/: __init__.py  enumeration.py  flag_capture.py  foothold.py  privesc.py  recon.py  system.py  writeup.py
db/: __init__.py  session.py
htb/: __init__.py  api.py  models.py  vpn.py
reporting/: __init__.py  session_log.py  writeup.py
tools/: __init__.py  base.py  crack.py  exploit.py  hosts.py  post.py  recon.py  shell.py  web.py
