[project]
name = "expedition33"
version = "0.1.0"
description = "Autonomous HackTheBox pentesting agent for Kali and ParrotOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "openai>=1.55.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "msgpack>=1.0.8",
]

[project.scripts]
expedition33 = "main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "db*", "htb*", "reporting*", "tools*"]
